# kernel_sdk

./: DEPS  WATCHLISTS  codereview.settings  dart.gyp
pkg/compiler/lib/src/: apiimpl.dart  compile_time_constants.dart  compiler.dart  dart2js.dart  dart_types.dart  dump_info.dart  library_loader.dart  patch_parser.dart  source_file_provider.dart  typechecker.dart
pkg/compiler/lib/src/common/: tasks.dart
pkg/compiler/lib/src/diagnostics/: messages.dart
pkg/compiler/lib/src/elements/: modelx.dart
pkg/compiler/lib/src/hash/: sha1.dart
pkg/compiler/lib/src/helpers/: stats.dart
pkg/compiler/lib/src/io/: source_file.dart
pkg/compiler/lib/src/js_backend/: backend.dart  patch_resolver.dart
pkg/compiler/lib/src/parser/: element_listener.dart  listener.dart  parser.dart  partial_elements.dart  partial_parser.dart
pkg/compiler/lib/src/resolution/: class_hierarchy.dart  class_members.dart  constructors.dart  members.dart  resolution.dart  scope.dart  send_resolver.dart  type_resolver.dart  typedefs.dart
pkg/compiler/lib/src/scanner/: scanner_task.dart  utf8_bytes_scanner.dart
pkg/compiler/lib/src/serialization/: json_serializer.dart
pkg/compiler/lib/src/tokens/: keyword.dart  token.dart
pkg/compiler/lib/src/tree/: nodes.dart
pkg/compiler/lib/src/util/: convert.dart
runtime/: BUILD.gn  codereview.settings  dart-runtime.gyp
runtime/include/: dart_api.h
runtime/lib/: class_id.dart  compact_hash.dart  convert_patch.dart  core_patch.dart  double_patch.dart  errors_patch.dart  expando_patch.dart  immutable_map.dart  integers_patch.dart  internal_patch.dart  isolate_patch.dart  math_patch.dart  object_patch.dart  string_patch.dart  symbol_patch.dart  typed_data.dart  uri_patch.dart
runtime/platform/: globals.h
runtime/tools/: create_snapshot_file.py
runtime/vm/: BUILD.gn  aot_optimizer.cc  aot_optimizer.h  assembler.cc  assembler_arm.cc  assembler_arm.h  assembler_arm64.cc  assembler_arm64.h  ast.cc  bootstrap.cc  bootstrap.h  bootstrap_nocore.cc  class_finalizer.cc  class_finalizer.h  clustered_snapshot.cc  code_descriptors.cc  code_descriptors.h  code_generator.cc  code_generator.h  code_statistics.cc  code_statistics.h  compiler.cc  compiler.h  constant_propagator.cc  dart.cc  dart.h  dart_api_impl.cc  dart_entry.cc  dart_entry.h  dil.cc  dil.h  dil_binary.cc  dil_main.cc  dil_reader.cc  dil_reader.h  dil_to_il.cc  dil_to_il.h  disassembler.cc  disassembler_arm.cc  disassembler_arm64.cc  (+71 more)
sdk/lib/_internal/js_runtime/lib/: annotations.dart  core_patch.dart  developer_patch.dart  js_helper.dart
sdk/lib/_internal/sdk_library_metadata/lib/: libraries.dart
sdk/lib/core/: bool.dart  errors.dart  expando.dart  null.dart  object.dart
sdk/lib/developer/: extension.dart  profiler.dart
sdk/lib/internal/: internal.dart  symbol.dart
sdk/lib/io/: file_system_entity.dart
sdk/lib/mirrors/: mirrors.dart
tests/co19/: co19-kernel.status
tests/dill/: compile.sh  compile_co19.dart  compile_co19.sh  compile_co19_batch.dart  compile_co19_with_rasta.sh  compile_co19_with_rasta_batch.dart  compile_with_rasta.sh  dill.status  expect.dart  for_in_loop_test.dill  getters_and_setters_test.dart  getters_and_setters_test.dill  global_field_initializer_test.dart  instance_getters_and_setters_test.dart  instance_getters_and_setters_test.dill  invocation_errors_test.dill  invocation_test.dill  klass_field_initializer_test.dart  klass_field_initializer_test.dill  klass_test.dill  load_store_test.dart  load_store_test.dill  loop_test.dill  mixin_test.dart  mixin_test.dill  simple_literal_test.dill  string_buffer_test.dart  string_concatenation_test.dart  string_concatenation_test.dill  superclass_test.dill  this_test.dart  this_test.dill
tests/dill/co19/Language/Classes/: declarations_t01_test.dill  declarations_t34_test.dill  definition_t01_test.dill  definition_t20_test.dill  definition_t23_test.dill  deсlarations_t01_test.dill  deсlarations_t34_test.dill  implements_clause_t01_test.dill  implements_clause_t02_test.dill  implicit_interface_t01_test.dill  method_definition_t01_test.dill  method_definition_t03_test.dill  method_definition_t04_test.dill  method_definition_t05_test.dill  method_definition_t06_test.dill  method_definition_t10_test.dill  mixins_t01_test.dill  same_name_members_t10_test.dill  same_name_type_variable_t01_test.dill  same_name_type_variable_t04_test.dill  same_name_type_variable_t07_test.dill
tests/dill/co19/Language/Enums/: declaration_equivalent_t01_test.dill  declaration_equivalent_t02_test.dill  declaration_equivalent_t03_test.dill  syntax_t01_test.dill  (+7 more)
tests/dill/unsorted/: as_is_test.dill  block_scope_test.dill  breakable_statement_test.dart  breakable_statement_test.dill  cascaded_await_test.dart  closures_regression_test.dill  closures_test.dart  closures_test.dill  conditional_test.dill  constant_evaluator_regression_test.dill  constant_expressions_test.dart  constant_expressions_test.dill  factory_regression_test.dart  factory_regression_test.dill  field_dispatcher_test.dill  finally_contexts_test.dill  for_in_loop_test.dill  getters_and_setters_test.dill  global_field_initializer_test.dill  global_function_test.dart  global_function_test.dill  hello_test.dill  instance_getters_and_setters_test.dill  invocation_errors_test.dill  invocation_test.dill  klass_field_initializer_test.dill  klass_test.dart  klass_test.dill  let_test.dart  let_test.dill  load_store_test.dill  local_function_test.dill  loop_test.dill  mapliteral_test.dart  mapliteral_test.dill  mixin_test.dill  nsm_dispatcher_test.dill  nullable_operator_test.dart  nullable_operator_test.dill  rethrow_test.dart  (+26 more)
tests/language/: async_await_test.dart  language.status  language_kernel.status
tools/: .packages  VERSION  git_submodules_sync.py  patch_sdk.dart  run_pub_get.py  test.py
tools/sdks/linux/: dart-sdk.tar.gz.sha1
tools/sdks/mac/: dart-sdk.tar.gz.sha1
tools/sdks/win/: dart-sdk.tar.gz.sha1
tools/testing/dart/: compiler_configuration.dart  status_diff.dart  test_configurations.dart  test_options.dart  test_progress.dart  test_runner.dart  test_suite.dart
(+6074 files in other folders)
